# itlyb-AI

./: .gitignore  README.md  hello.py  pyproject.toml
homework/260604/: 01-LLM_Conn_Test.py  02-LLM_Message_Test.py  03-LLM_Async.py  04-LLM_Stream.py  05-LLM-Batch.py  model_calls.py
homework/260605/: 01-init_chat_model_test.py  02-ollama_test.py  03-runtime_test.py  04-多模态.py  05-ratelimit_test.py  05-toekn统计.py  06-模型配置.py  07-prompttemplate_test.py  08-聊天提示词模板.py  09-历史对话记录提示词模版.py  10-少样本提示词模板.py
homework/260605/机试/: exam1.py  exam2.py  exam3.py
homework/260608/: 01-解析器.py  02-pydantic对象.py  03-解析器案例2.py  04-解析器参数.py  05-通过langchain调用厂商API实现指定格式输出.py  06-统一格式输出解析器.py  07-字符串输出解析器.py  08-pydanic解析器.py  09-自定义输出解析器.py  10-LCEL表达式.py  11-Runable案例.py  12-Runable并行案例.py  13-Runable并行案例2.py  14-RunnablePassthrough.py  15-调用方法总结.py  15.py  16-对话历史.py  17-错误充实.py  18-备用模型.py
homework/260609/: 01-加载 Markdown.py  02-加载Docx.py  03-加载在线PDF.py  04-加载本地PDF.py  05-文档切分.py  06-HuggingFace嵌入.py  07-OpenAI嵌入.py
homework/260610/: 01-BGE-M3-稠密&稀疏向量.py
homework/260611/: 01-定义Schema.py  02-配置索引.py  03-创建Collection.py  04-插入数据.py  05-删除数据.py  06-完整案例.py  07-稠密向量检索.py  08-稀疏向量检索.py  09-混合检索与重排序.py  10-标量检索.py  11-完整案例.py
